k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fin-enterprise
  labels:
    client: fin-enterprise-application
