k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fin-enterprise-api
spec:
  type: ClusterIP
  selector:
    app: fin-enterprise-api
  ports:
    - port: 80
      targetPort: 8000
      name: http
